examples/test/testpolicy13296.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13296
  namespace: namespace114
spec:
  podSelector:
    matchLabels:
      key16: value27
      key19: value6
      key33: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value30
          key39: value23
          key18: value41
      podSelector:
        matchLabels:
          key49: value29
          key6: value35
          key36: value38
